<resources>
    <string name="app_name">HW02</string>

    <string name="lblCreateTask">Create Task</string>

    <string name="numbertasks">You have </string>
    <string name="upcoming">Upcoming Task</string>
    <string name="viewtasks">View Tasks</string>
    <string name="createtasks">Create a Task</string>
    <string name="taskinfo">Task Information</string>
    <string name="taskNameHint">Task Name </string>

    <string name="label_name">Name: </string>
    <string name="label_date">Date: </string>
    <string name="label_priority">Priority: </string>

    <string name="button_cancel">CANCEL</string>
    <string name="button_delete">DELETE</string>

    <string name="label_task_name">Task Name</string>
    <string name="btn_set_date">Set Date</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="button_submit">SUBMIT</string>

    <string name="tasks">tasks</string>
    <string name="task">task</string>

    <string name="emptyTask">Please put in a task name for the task</string>
    <string name="emptyDate">Please put in a task date for the task</string>
    <string name="emptyPriority">Please put in a priority for the task</string>

    <string name="cancelTask">You canceled the task</string>
    <string name="selectTask">Select a Task</string>
    <string name="noTask">You do not have any task</string>

    <string name="deleteToast">You deleted your task successfully</string>
    <string name="confirmation">Deleting Confirmation</string>
    <string name="confirmationMessage">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>